update UI for api subscription list - use same component as backoffice

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1395,10 +1395,13 @@
     "more.nav.options": "More options",
     "api.access.modal.title": "Api access request",
     "subscription.copy.basic.auth.label": "basic auth.",
+    "subscription.copy.basic.auth.aria.label": "Copy the Basic Auth encoded credentials",
     "subscription.copy.basic.auth.help": "Copy credentials as basic auth. value",
     "subscription.copy.apikey.label": "clientId:clientToken",
+    "subscription.copy.apikey.aria.label": "Copy the credentials",
     "subscription.copy.apikey.help": "Copy credentials as clientId:clientSecret",
     "subscription.copy.token.label": "token",
+    "subscription.copy.token.aria-label": "Copy the token to retrieve credentials by API",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
     "setting.panel.reset.confirm.message": "Are you sure you want to reset your organization's data?",
     "api.pricing.created.subscription.panel.title": "Your API Key is Ready",
