--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1396,10 +1396,13 @@
   "more.nav.options": "Plus d'options",
   "api.access.modal.title": "demande d'accès à une API",
   "subscription.copy.basic.auth.label": "Basic auth.",
+  "subscription.copy.basic.auth.aria.label": "Copier les secrets encodés en Basic Auth",
   "subscription.copy.basic.auth.help": "Copier les identifiants sous la forme de valeur Basic auth.",
   "subscription.copy.apikey.label": "ClientId:ClientToken",
+  "subscription.copy.apikey.aria.label": "Copier le clientId et le clientSecret",
   "subscription.copy.apikey.help": "Copier les identifiants sous la forme clientId:clientSecret",
   "subscription.copy.token.label": "Jeton",
+  "subscription.copy.token.aria.label": "Copier le jeton pour récupérer les secrets",
   "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
   "setting.panel.reset.confirm.message": "Êtes-vous sûr de vouloir réinitialiser les données de votre organisation ?",
   "api.pricing.created.subscription.panel.title": "Votre clé d'API est prête",
