works on api pricing - add some translation and use confirmModal

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -646,7 +646,11 @@
     "Enter email": "Enter email",
     "Your message": "Your message",
     "Send": "Send",
-    "delete.api.success": "Api %s deleted successfully",
+    "delete.api.success": "Api %s has been successfully deleted",
+    "create.plan.succesful.toast.label": "Usage plan %s has been successfully created",
+    "delete.plan.succesful.toast.label": "Usage plan %s has been successfully deleted",
+    "create.environment.succesful.toast.label": "Environment %s has been successfully created",
+    "delete.environment.succesful.toast.label": "Environment %s has been successfully deleted",
     "otoroshi.settings.deleted.success": "Otoroshi settings successfully deleted",
     "otoroshi.settings.created.success": "Otoroshi settings successfully created",
     "otoroshi.settings.updated.success": "Otoroshi settings successfully updated",
