--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -397,7 +397,7 @@
   "Add ordered list": "Liste ordonnée",
   "Add check list": "Liste de contrôle",
   "Page ref": "Page ref",
-  "Warning": "Warning",
+  "Warning": "Attention",
   "Warning with title": "Warning avec titre",
   "Note": "Note",
   "Note with title": "Note avec titre",
@@ -647,6 +647,10 @@
   "Your message": "Votre message",
   "Send": "Envoyer",
   "delete.api.success": "L'API %s a été correctement supprimée",
+  "create.plan.succesful.toast.label": "Le plan %s a été correctement créé",
+  "delete.plan.successful.toast.label": "Le plan %s a été correctement supprimé",
+  "create.environment.successful.toast.label": "L'environnement %s a été correctement créé",
+  "delete.environment.successful.toast.label": "L'environnement %s a été correctement supprimé",
   "otoroshi.settings.deleted.success": "Les paramètres Otoroshi ont été correctement supprimés",
   "otoroshi.settings.created.success": "Les paramètres Otoroshi ont été correctement créés",
   "otoroshi.settings.updated.success": "Les paramètres Otoroshi ont été correctement modifiés",
@@ -1412,7 +1416,7 @@
   "delete.team.confirm.modal.description.3": "Toutes les API gérées par votre équipe.",
   "delete.team.confirm.modal.description.4": "Toutes les souscriptions aux API gérées par votre équipe.",
   "delete.api.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cette API ? Cette action est irréversible et entraînera la suppression de :",
-  "delete.api.confirm.modal.description.2": "Toutes les clés API associées à cette API.",
+  "delete.api.confirm.modal.description.2": "Toutes les clés d'API associées à cette API.",
   "delete.user.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cet utilisateur ? Cette action est irréversible et entraînera la suppression de :",
   "delete.user.confirm.modal.description.2": "Toutes les souscriptions et clés API associées à cet utilisateur.",
   "delete.user.confirm.modal.description.3": "Toutes les API gérées par cet utilisateur.",
@@ -1420,9 +1424,9 @@
   "delete.subscription.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cette souscription ? Cette action est irréversible et entraînera la suppression de :",
   "delete.subscription.confirm.modal.description.2": "La clé API associée à cette souscription.",
   "delete.plan.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer ce plan ? Cette action est irréversible et entraînera la suppression de :",
-  "delete.plan.confirm.modal.description.2": "Toutes les clés API associées à ce plan.",
+  "delete.plan.confirm.modal.description.2": "Toutes les clés d'API associées à ce plan.",
   "delete.environment.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cet environnement ? Cette action est irréversible et entraînera la suppression de :",
-  "delete.environment.confirm.modal.description.2": "Toutes les clés API associées à cet environnement.",
+  "delete.environment.confirm.modal.description.2": "Toutes les clés d'API associées à cet environnement.",
   "delete.item.confirm.modal.confirm.label": "Saisissez %s pour confirmer la suppression",
   "delete.api.confirm.modal.description.next.version": "La version %s sera automatiquement définie comme la version courante de l'API",
   "delete.api.confirm.modal.description.next.label": "Nouvelle version courante",
