Update documentation page

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1001,8 +1001,10 @@
     "mailing_internalization.translation_updated": "Translation updated",
     "mailing_internalization.failed_translation_update": "Failed to save translation",
     "mailing_internalization.mail_tab": "Mail template",
+    "mailing_internalization.mail_template_tab": "Mail model",
     "mailing_internalization.front_office_tab": "Front office",
     "mailing_internalization.mail_description": "Manage the contents of all Daikoku emails",
+    "mailing_internalization.mail_template_description": "Configure the template use for all mail",
     "mailing_internalization.front_office_description": "Configure translations for the front office",
     "mailing_internalization.action": "Manage",
     "mailing_internalization.go_to_edit_template": "Edit mail template",
@@ -1251,7 +1253,7 @@
     "Process": "Process",
     "api.pricings.no.step.explanation": "It's seems that there is no process subscription request validation process",
     "api.pricings.add.first.step.btn.label": "Add a first validation step",
-    "api.documentation.clone.page.modal.title": "Cloning documentation pages",
+    "api.documentation.clone.page.modal.title": "Import documentation pages",
     "api.documentation.clone.page.placeholder": "Select all pages to clone",
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
     "demand.delete.modal.title": "Deleting a subscription request",
@@ -1288,6 +1290,11 @@
     "sub.meta.modal.valid.until.label": "Valid until",
     "sub.meta.modal.valid.until.help": "The date until which the subscription will be valid",
     "documentation.add.page.btn.label": "Add page",
+    "documentation.add.page.btn.aria.label": "Add a documentation page",
+    "documentation.import.page.btn.label": "Import page",
+    "documentation.import.page.btn.aria.label": "Import a documentation page from another API version",
+    "documentation.import.page.reuse.btn.label": "use same page",
+    "documentation.import.page.clone.btn.label": "Clone page",
     "DisplayMode": "Display mode",
     "display.environment.label": "Environment",
     "display.default.label": "Default",
