--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1252,7 +1252,7 @@
   "Process": "Process",
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
   "api.pricings.add.first.step.btn.label": "Ajouter une première étape de validation",
-  "api.documentation.clone.page.modal.title": "Clonage des pages de documentation",
+  "api.documentation.clone.page.modal.title": "Import des pages de documentation",
   "api.documentation.clone.page.placeholder": "Sélectionnez toutes les pages à cloner",
   "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
   "demand.delete.modal.title": "Suppression d'une demande de souscription",
@@ -1289,6 +1289,11 @@
   "sub.meta.modal.valid.until.label": "Valide jusqu'à",
   "sub.meta.modal.valid.until.help": "La date de fin de validité de la clé",
   "documentation.add.page.btn.label": "Ajouter une page",
+  "documentation.add.page.btn.aria.label": "Ajouter une page de documentation",
+  "documentation.import.page.btn.label": "Importer une page",
+  "documentation.import.page.btn.aria.label": "Importer une page de documentation depuis une autre version de l'API",
+  "documentation.import.page.reuse.btn.label": "Réutiliser la page",
+  "documentation.import.page.clone.btn.label": "Cloner la page",
   "DisplayMode": "Affichage",
   "display.environment.label": "Environnement",
   "display.default.label": "Défaut",
