update api post UI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -818,8 +818,10 @@
     "team_api_post.delete.confirm": "Are you sure to delete this news?",
     "team_api_post.saved": "News saved",
     "team_api_post.failed": "Something went wrong",
-    "team_api_post.new": "Create news",
-    "team_api_post.update": "Update news",
+    "api.post.create.post.btn.label": "Create a new announcement",
+    "api.post.update.post.btn.label": "Update the announcement",
+    "api.post.delete.post.btn.label": "Delete the announcement",
+    "api.post.not.found.alert": "No announcements at this time.",
     "team_api_post.empty_posts_list": "No news",
     "team_api_post.load_old_posts": "Load old news",
     "team_api_post.publish": "Publish news",
@@ -827,6 +829,7 @@
     "team_api_post.content": "Content",
     "New Published Post": "News published on API",
     "new.published.post.notification": "%s, as admin of %s, has published a new post on %s.",
+    "nav.section.news.label": "Annoucements",
     "News": "News",
     "deleted": "deleted",
     "Deleted API": "Deleted API",
