--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -818,8 +818,10 @@
   "team_api_post.delete.confirm": "Êtes-vous sûr de vouloir supprimer cette publication ?",
   "team_api_post.saved": "Publication enregistrée",
   "team_api_post.failed": "Une erreur est survenue",
-  "team_api_post.new": "Nouvelle publication",
-  "team_api_post.update": "Metter à jour une publication",
+  "api.post.create.post.btn.label": "Créer une nouvelle publication",
+  "api.post.update.post.btn.label": "Mettre à jour la publication",
+  "api.post.delete.post.btn.label": "Supprimer la publication",
+  "api.post.not.found.alert": "Aucune actualité pour le moment.",
   "team_api_post.empty_posts_list": "Aucune publication",
   "team_api_post.load_old_posts": "Charger plus de publications",
   "team_api_post.publish": "Publier la publication",
@@ -827,6 +829,7 @@
   "team_api_post.content": "Contenu",
   "New Published Post": "Une nouvelle publication a été publiée",
   "new.published.post.notification": "%s, admin. de l'équipe %s, a posté une nouvelle publication à propos de l'api %s.",
+  "nav.section.news.label": "Actualités",
   "News": "Actualités",
   "deleted": "supprimé",
   "Deleted API": "API supprimée",
