Allow user to display apikey

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1417,6 +1417,9 @@
     "subscription.copy.token.label": "token",
     "subscription.copy.token.aria-label": "Copy the token to retrieve credentials by API",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
+    "subscription.display.credentials": "Display credentials",
+    "subscription.display.credentials.clientId": "Client ID",
+    "subscription.display.credentials.clientSecret": "Client Secret",
     "setting.panel.reset.confirm.message": "Are you sure you want to reset your organization's data?",
     "api.pricing.created.subscription.panel.title": "Your API Key is Ready",
     "right.panel.close.aria.label": "Close the panel",
