--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1416,6 +1416,9 @@
   "subscription.copy.token.label": "Jeton",
   "subscription.copy.token.aria.label": "Copier le jeton pour récupérer les secrets",
   "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
+  "subscription.display.credentials": "Afficher les identifiants",
+  "subscription.display.credentials.clientId": "Client ID",
+  "subscription.display.credentials.clientSecret": "Client Secret",
   "setting.panel.reset.confirm.message": "Êtes-vous sûr de vouloir réinitialiser les données de votre organisation ?",
   "api.pricing.created.subscription.panel.title": "Votre clé d'API est prête",
   "right.panel.close.aria.label": "Fermer le panneau latéral",
