apigroups use new UI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -564,9 +564,11 @@
     "signup.to.tenant": "Signup to %s",
     "api.creation.title.modal": "Select the team for which to create new API",
     "api.creation.description.modal": "You are going to create an API. For which team do you want to create it?",
-    "api.creation.title.panel.title": "API creation",
+    "api.creation.right.panel.title": "API creation",
+    "api.creation.successful.toast": "API %s successfully created",
     "apigroup.creation.title.modal": "Select the team for which to create new APIs group",
     "apigroup.creation.description.modal": "You are going to create an APIs group. For which team do you want to create it?",
+    "apigroup.creation.successful.toast": "APIs group %s successfully created",
     "Set font family from asset": "Set font family from asset",
     "Public": "Public",
     "Private": "Private",
