--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -565,8 +565,10 @@
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
   "api.creation.right.panel.title": "Création d'une API",
+  "api.creation.successful.toast": "l'API %s a été créée avec succès",
   "apigroup.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer un nouveau groupe d'APIs",
   "apigroup.creation.description.modal": "Vous allez créer un nouveau groupe d'API. Pour quelle équipe voulez-vous le créer ?",
+  "apigroup.creation.successful.toast": "Le group d'APIs %s a été créé avec succès",
   "Set font family from asset": "Définir la police de style depuis un asset",
   "Public": "Publique",
   "Private": "Privée",
