--- a/manual/docs/04-cli/041-informations/index.mdx
+++ b/manual/docs/04-cli/041-informations/index.mdx
@@ -115,7 +115,7 @@ daikoku push
 
 If you already have a legacy CMS on your Daikoku, you can start by importing it 
 ```sh
-daikoku projects migrate --name=<NEW_NAME_OF_YOUR_PROJECT> \
+daikoku cms migrate --name=<NEW_NAME_OF_YOUR_PROJECT> \
                            --path=<PATH_TO_THE_NEW_PROJECT> \
                            --server=<DAIKOKU_SERVER_TO_PULL> \
                            --apikey=<CMS_APIKEY>
