fix broken links in cli doc

--- a/manual/docs/04-cli/042-apis-to-business-website/05-add-dynamic-content.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/05-add-dynamic-content.mdx
@@ -49,4 +49,4 @@ You can find the model for each entity (api, documentation, team, user, etc) on 
 
 Following the steps above, you can access all Daikoku entities, including teams, APIs, users or documentation pages.
 
-You can find more information about them [here](https://maif.github.io/daikoku/docs/cli)
+You can find more information about them [here](https://maif.github.io/daikoku/docs/cli/informations/)
