fix broken path to cms doc

--- a/manual/docs/04-cli/042-apis-to-business-website/12-add-personal-assets.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/12-add-personal-assets.mdx
@@ -5,7 +5,7 @@ However, Daikoku also provides a way to upload, store, and publish your own asse
 
 # Add your first asset
 
-Download the asset used earlier in this tutorial and save it to the `src/assets/api.jpeg` location.
+Download the asset used earlier in this tutorial and save it to the `assets/api.jpeg` location (not under src folder).
 
 ```sh
 wget -O ./assets/api.jpeg https://images.pexels.com/photos/1148820/pexels-photo-1148820.jpeg \
