--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1365,7 +1365,8 @@
   "apikeys.view.api": "Voir l'API",
   "apikeys.view.apikeys": "Voir les clés d'API",
   "subscription.for": "Souscription à",
-  "subscription.created.at": "Souscription créée le %s",
+  "subscription.created.at": "créée le %s",
+  "subscription.extra.resources.label": "Ressources accessibles supplémentaires",
   "subscription.valid.until": "valid until %s",
   "subscription.nota.part.1": "Consultez la documentation",
   "subscription.nota.part.2": "ou explorez",
