Better alert message on subscription deletion/extraction

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -955,7 +955,9 @@
     "disabled.due.to.aggregation.security": "disabled due to enabling of aggregation security",
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
-    "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this API key unique and separate from his parent plan?",
+    "team_apikey_for_api.ask_for_make_unique": "Are you sure you want to separate this API key from the parent key and create a new one? This action is irreversible. It will result in:",
+    "team_apikey_for_api.ask_for_make_unique.2": "Updating the parent subscription associated with the API %s.",
+    "team_apikey_for_api.ask_for_make_unique.3": "Creating a new subscription for the API %s.",
     "team_apikey_for_api.ask_for_make_unique.success_message": "The API key has been successfully separated from his parent",
     "team_api_info.isDefault": "Use as latest version",
     "request_api_access": "You need to be authorized to view this API.",
@@ -1436,8 +1438,14 @@
     "delete.user.confirm.modal.description.2": "All subscriptions and API keys associated with this user.",
     "delete.user.confirm.modal.description.3": "All APIs managed by this user.",
     "delete.user.confirm.modal.description.4": "All subscriptions to the APIs managed by this user.",
-    "delete.subscription.confirm.modal.description.1": "Are you sure you want to delete this subscription? This action is irreversible and will result in the deletion of:",
-    "delete.subscription.confirm.modal.description.2": "The API key associated with this subscription.",
+    "delete.subscription.confirm.modal.description.1": "Are you sure you want to delete this subscription? This action is irreversible.",
+    "delete.subscription.confirm.modal.description.single": "This action will permanently delete the associated API key.",
+    "delete.subscription.confirm.modal.description.child": "The parent API key associated with the API %s will be updated and will no longer provide access to the API %s.",
+    "delete.subscription.confirm.modal.description.parent.deleteAll": "All associated subscriptions and API keys will also be permanently deleted.",
+    "delete.subscription.confirm.modal.description.parent.deleteAll.list": "Affected subscriptions:",
+    "delete.subscription.confirm.modal.description.parent.promoteChild": "The subscription to %s has been designated as the new parent. Associated resources will remain unchanged except for access to %s.",
+    "delete.subscription.confirm.modal.description.parent.splitChildren": "Child subscriptions will become independent, and new individual API keys will be generated.",
+    "delete.subscription.confirm.modal.description.parent.splitChildren.list": "Newly generated subscriptions for the following resources:",
     "delete.plan.confirm.modal.description.1": "Are you sure you want to delete this Plan? This action is irreversible and will result in the deletion of:",
     "delete.plan.confirm.modal.description.2": "All API keys associated with this plan.",
     "delete.environment.confirm.modal.description.1": "Are you sure you want to delete this environment? This action is irreversible and will result in the deletion of:",
