new UI for api pricing card

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -770,9 +770,9 @@
     "permission.caption.user": "a User can read team API keys",
     "Team forbidden to create api on current tenant": "Team forbidden to create API on current tenant",
     "Default message": "Default message",
-    "plan.limits": "Quotas: %s req./sec, %s req./month",
-    "plan.limits.unlimited": "Quotas: unlimited calls",
-    "plan.pricing": "Pricing: %s",
+    "plan.limits": "%s req./sec, %s req./month",
+    "plan.limits.unlimited": "unlimited calls",
+    "plan.pricing": "%s",
     "req.": "req.",
     "month": "month",
     "Free": "Free",
