--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -770,9 +770,9 @@
   "permission.caption.user": "un utilisateur peut consulter les clés API",
   "Team forbidden to create api on current tenant": "Équipe interdite de créer une API sur l'organisation actuelle",
   "Default message": "Message par défaut",
-  "plan.limits": "Limites : %s appels/sec, %s appels/mois",
-  "plan.limits.unlimited": "Limites : appels illimités",
-  "plan.pricing": "Tarif : %s",
+  "plan.limits": "%s appels/sec, %s appels/mois",
+  "plan.limits.unlimited": "appels illimités",
+  "plan.pricing": "%s",
   "req.": "appels",
   "month": "mois",
   "Free": "Gratuit",
